--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -4,15 +4,17 @@ layout: default
 bodyClass: "page-contact"
 ---
 
-<div class="container pb-6 pt-6 pt-md-10 pb-md-10">
-    <div class="row justify-content-start">
-        <div class="col-8 col-md-6">
-            <div class="service service-single">
-                <h1 class="title">{{page.title}}</h1>
-                {% include call.html show_button=false %}
-                <div class="content mt-4">{{content}}</div>
+<div class="contacts">
+    <div class="container pb-6 pt-6 pt-md-10 pb-md-10">
+        <div class="row justify-content-start">
+            <div class="col-lg-8">
+                <div class="service service-single">
+                    <h1 class="title">{{page.title}}</h1>
+                    {% include call.html show_button=false %}
+                    <div class="content mt-4">{{content}}</div>
+                </div>
             </div>
+            <div class="col-lg-4">{% include osm.html %}</div>
         </div>
-        <div class="col-4 col-md-2">{% include osm.html %}</div>
     </div>
 </div>
