--- a/_includes/ymetrika.html
+++ b/_includes/ymetrika.html
@@ -1,3 +1,4 @@
+<meta name="yandex-verification" content="3a81c1bc51418e23" />
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
     (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
