--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
       "@type": "Organization",
       "url": "{{ site.url }}",
       "logo": "{{ page.image | absolute_url }}",
+      "image": "{{ page.image | absolute_url }}",
       "name": "{{ page.title }}",
       "address": {
         "@type": "PostalAddress",
@@ -41,22 +42,25 @@
         "postalCode": "MD-2001",
         "addressCountry": "MD"
       },
-      "openingHoursSpecification": {
-        "@type": "OpeningHoursSpecification",
-        "dayOfWeek": [
-          "Monday",
-          "Tuesday",
-          "Wednesday",
-          "Thursday",
-          "Friday"
-        ],
-        "opens": "09:00",
-        "closes": "18:00"
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": 47.02164,
-        "longitude": 28.83124
+      "location": {
+        "@type": "Place",
+        "openingHoursSpecification": {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday"
+          ],
+          "opens": "09:00",
+          "closes": "18:00"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 47.02164,
+          "longitude": 28.83124
+          }
       },
       "telephone": "{{ site.data.contact.phone }}"
     }
