--- a/_includes/osm.html
+++ b/_includes/osm.html
@@ -1,16 +1,11 @@
 <iframe 
     id= "mapsource" 
     scrollwheel="false" 
-    width="425" 
-    height="350" 
     frameborder="0" 
     scrolling="no" 
     marginheight="0" 
     marginwidth="0"
     src="https://www.openstreetmap.org/export/embed.html?bbox=28.829474151134495%2C47.02083777768486%2C28.833014667034153%2C47.02243224825672&amp;layer=mapnik&amp;marker=47.021635018923185%2C28.83124440908432"
-    style="border: 1px solid black; pointer-events: none;">
+    style="border: 0px solid black; pointer-events: none; width: 30rem; height: 25rem; padding: 2rem 1rem;">
 </iframe>
 <br />
-<small>
-    <a href="https://www.openstreetmap.org/?mlat=47.02164&amp;mlon=28.83124#map=19/47.02164/28.83124">View Larger Map</a>
-</small>
