--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -5,8 +5,8 @@ bodyClass: "page-contact"
 ---
 
 <div class="contacts">
-    <div class="container pb-6 pt-6 pt-md-10 pb-md-10">
-        <div class="row justify-content-start">
+    <div class="container">
+        <div class="row">
             <div class="col-lg-8">
                 <div class="service service-single">
                     <h1 class="title">{{page.title}}</h1>
