--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
   {% if site.data.seo.meta_twitter_site %}<meta name="twitter:site" content="{{ site.seo.meta_twitter_site }}"/>{% endif %}
   {% if site.data.seo.meta_twitter_creator %}<meta name="twitter:creator" content="{{ site.seo.meta_twitter_creator }}"/>{% endif %}
   {% include ymetrika.html %}
-
+{% if page.type == "index" %}
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -65,6 +65,7 @@
       "telephone": "{{ site.data.contact.phone }}"
     }
     </script>
+{% endif %}
 
 
 </head>
