--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <!-- Self host font -->
   <!-- <link rel="preload" href="{{ '/assets/fonts/playfair-display.woff2' | relative_url }}" as="font" type="font/woff2" crossorigin> -->
+  <link href="{{ '/assets/css/lightbox.min.css' | relative_url }}" rel="stylesheet">
   <link href="{{ '/assets/css/style.css' | relative_url }}" rel="stylesheet">
   
   {% if page.keywords %}<meta name="keywords" content="{{ page.keywords }}" />{% endif %}
@@ -79,6 +80,7 @@
   {% include footer.html %}
   {% include sub-footer.html %}
   <script type="text/javascript" src="{{ '/assets/js/scripts.js' | relative_url }}"></script>
+  <script type="text/javascript" src="{{ '/assets/js/lightbox-plus-jquery.min.js' | relative_url }}"></script>
   {% include google-analytics.html %}
 </body>
 </html>
