--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,7 +54,15 @@ bodyClass: "page-home"
       <div class="col-12 col-md-6 col-lg-4 mb-2">
         <div class="feature">
           {% if feature.image %}
-          <div class="feature-image"><img alt="{{ feature.title }} logo" src="{{ feature.image.url | relative_url }}" width="{{ feature.image.width }}" height="{{ feature.image.height }}" /></div>
+          <div class="feature-image">
+            <a href="{{ feature.image.url | relative_url }}" data-lightbox="{{ feature.image.url }}" data-title="{{ feature.title }}">
+              <img 
+                alt="{{ feature.title }}" 
+                src="{{ feature.image.url | relative_url }}" 
+                width="{{ feature.image.width }}" 
+                height="{{ feature.image.height }}" />
+            </a>
+          </div>
           {% endif %}
           <h2 class="feature-title">{{ feature.title }}</h2>
           <div class="feature-content">{{ feature.description }}</div>
