--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,6 +18,17 @@ bodyClass: "page-home"
       </div>
       {% endif %}
     </div>
+    {% if page.video %}
+    <div class="row justify-content-start pt-2">
+      <div class="col-12 col-md-7 col-lg-6 order-2 order-md-1">
+        <iframe width="414" height="315" class="mw-100 mh-100" src="https://www.youtube.com/embed/BD1DYS-uoXU?si=fXBhNkxKbNn6Psv3"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen>
+        </iframe>
+      </div>
+    </div>
+    {% endif %}
   </div>
 </div>
 
