--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,15 +19,17 @@ bodyClass: "page-home"
       {% endif %}
     </div>
     {% if page.video %}
-    <div class="row justify-content-start pt-2">
-      <div class="col-12 col-md-7 col-lg-6 order-2 order-md-1">
-        <iframe width="414" height="315" class="mw-100 mh-100" src="https://www.youtube.com/embed/BD1DYS-uoXU?si=fXBhNkxKbNn6Psv3"
-          title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen>
-        </iframe>
-      </div>
-    </div>
+    <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@apromovareantreprenori/video/7347966235717553413"
+      data-video-id="7347966235717553413" style="max-width: 605px;min-width: 325px;">
+      <section> <a target="_blank" title="@apromovareantreprenori"
+          href="https://www.tiktok.com/@apromovareantreprenori?refer=embed">@apromovareantreprenori</a>
+        <p>Antreprenoriatul social este despre a face profit și despre a crea impact pozitiv în societate</p> <a
+          target="_blank" title="♬ original sound  - apromovareantreprenori"
+          href="https://www.tiktok.com/music/original-sound-apromovareantreprenori-7347966380922407685?refer=embed">♬
+          original sound - apromovareantreprenori</a>
+      </section>
+    </blockquote>
+    <script async src="https://www.tiktok.com/embed.js"></script>
     {% endif %}
   </div>
 </div>
